--- a/powercord_manifest.json
+++ b/powercord_manifest.json
@@ -3,6 +3,6 @@
     "name": "PROJEKTCORD:Mini",
     "author": "Serhat Pars",
     "license": "GPL-3.0 License",
-    "theme": "projekt.css",
+    "theme": "projekt-mini.css",
     "description": "A Clean, Dark Discord Theme. PROJEKTCORD is a built and powered theme for POWERCORD. Developer: Serhat Pars#0001"
 }
